src/objects/Vendor_Catalog__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Catalog</relationshipLabel>
        <relationshipName>Vendor_Catalog</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fintech_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fintech Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Fintech</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Portfolio Company</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Catalog (Fintech Account)</relationshipLabel>
        <relationshipName>Vendor_Catalog2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name (Row name)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_category__c</fullName>
        <label>Priority category</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority_item__c</fullName>
        <label>Priority item</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type (Header)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vendor_Catalog</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Catalog (Vendor)</relationshipLabel>
        <relationshipName>Vendor_Catalog1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vendor Catalog</label>
    <nameField>
        <displayFormat>VC- {0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Catalog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>